[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/font_title.tres" type="DynamicFont" id=3]

[node name="GameOver" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
main_menu_scene = "res://GUI/MainMenu.tscn"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 288.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameOverText" type="Label" parent="CenterContainer"]
margin_left = 36.0
margin_top = 62.0
margin_right = 252.0
margin_bottom = 86.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
align = 1
valign = 1

[node name="ButtonMenu" type="HBoxContainer" parent="."]
margin_left = 17.0
margin_top = 152.0
margin_right = 271.0
margin_bottom = 168.0
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="Reload" type="Button" parent="ButtonMenu"]
margin_right = 82.0
margin_bottom = 16.0
rect_min_size = Vector2( 82, 0 )
size_flags_vertical = 0
text = "Reload"

[node name="MainMenu" type="Button" parent="ButtonMenu"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Main Menu"

[node name="Quit" type="Button" parent="ButtonMenu"]
margin_left = 172.0
margin_right = 254.0
margin_bottom = 16.0
rect_min_size = Vector2( 82, 0 )
size_flags_vertical = 0
text = "Quit"
[connection signal="pressed" from="ButtonMenu/Reload" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="ButtonMenu/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="ButtonMenu/Quit" to="." method="_on_Quit_pressed"]
